force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/SAC_Reclamacion_Hipotecaria__c.object-meta.xml
<CustomObject>
    <description>Objeto para las reclamaciones hipotecarias de SAC</description>
    <label>Reclamación Hipotecaria</label>
    <nameField>
        <displayFormat>RH-{00000000}</displayFormat>
        <label>Reclamación Hipotecaria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reclamaciones Hipotecarias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>