force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Codigo_Contrato__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_Contrato__c</fullName>
    <description>Nº Préstamo - Contrato largo</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Código Contrato</label>
    <length>40</length>
    <type>Text</type>
</CustomField>