force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Codigo_Divisa__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_Divisa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código divisa</label>
    <length>3</length>
    <type>Text</type>
</CustomField>