force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Codigo_Finalidad_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_Finalidad_Prestamo__c</fullName>
    <description>Código de la finalidad del préstamo</description>
    <label>Código Finalidad Préstamo</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>