force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Entidad_Origen_Migracion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Entidad_Origen_Migracion__c</fullName>
    <description>Descripción de la entidad origen del préstamo, si ésta ha sido fusionada con CaixaBank (en caso contrato, no se informa)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entidad Origen Migración</label>
    <length>100</length>
    <type>Text</type>
</CustomField>