force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Fecha_cancelacion_real_prestamo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Fecha_cancelacion_real_prestamo__c</fullName>
    <description>Fecha de cancelación real del préstamo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha cancelación real del préstamo</label>
    <type>Date</type>
</CustomField>