force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Finalidad_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Finalidad_Prestamo__c</fullName>
    <description>Descripción de la finalidad del préstamo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Finalidad Préstamo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>