force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Finalidad_prestamo_consumidor__c.field-meta.xml
<CustomField>
    <fullName>SAC_Finalidad_prestamo_consumidor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalidad préstamo consumidor</label>
    <type>Checkbox</type>
</CustomField>