force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Id_cuenta_actual__c.field-meta.xml
<CustomField>
    <fullName>SAC_Id_cuenta_actual__c</fullName>
    <description>Id de la cuenta actual asociada al préstamo</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id de la cuenta actual</label>
    <length>19</length>
    <type>Text</type>
</CustomField>