force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Id_cuenta_TF7__c.field-meta.xml
<CustomField>
    <fullName>SAC_Id_cuenta_TF7__c</fullName>
    <description>Identificador de la cuenta en el TF7</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Id de la cuenta TF7</label>
    <length>23</length>
    <type>Text</type>
</CustomField>