force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_NIF_titular__c.field-meta.xml
<CustomField>
    <fullName>SAC_NIF_titular__c</fullName>
    <description>NIF del titular</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NIF del titular</label>
    <length>30</length>
    <type>Text</type>
</CustomField>