force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Provincia_centro_gestor__c.field-meta.xml
<CustomField>
    <fullName>SAC_Provincia_centro_gestor__c</fullName>
    <description>Provincia del centro gestor</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Provincia del centro gestor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>