force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Tipo_Garantia__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo_Garantia__c</fullName>
    <description>Descripción de la clasificación de la garantía del préstamo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Garantía</label>
    <length>100</length>
    <type>Text</type>
</CustomField>