force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Tipo_relacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo_relacion__c</fullName>
    <description>Descripción en castellano de relación contrato-persona</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo relación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>