force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Titular_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>SAC_Titular_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular Cuenta</label>
    <referenceTo>SAC_Reclamacion_Hipotecaria__c</referenceTo>
    <relationshipLabel>Reclamaciones Hipotecarias (Titular Cuenta)</relationshipLabel>
    <relationshipName>Reclamaciones_Hipotecarias1</relationshipName>
    <type>Lookup</type>
</CustomField>