force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/fields/SAC_Ultimo_mes_Datapool__c.field-meta.xml
<CustomField>
    <fullName>SAC_Ultimo_mes_Datapool__c</fullName>
    <description>Último mes en el que hay datos del préstamo en Datapool</description>
    <label>Último mes Datapool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>