force-app/main/default/objects/SAC_Reclamacion_Hipotecaria__c/recordTypes/SAC_Titular_Cuenta.recordType-meta.xml
<RecordType>
    <fullName>SAC_Titular_Cuenta</fullName>
    <active>true</active>
    <label>Titular Cuenta</label>
</RecordType>